deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-api-service
spec:
  type: LoadBalancer
  selector:
    app: heart-api
  ports:
    - port: 80
      targetPort: 8000
